Added Testnet band

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>Cavern Protocol</title>
   </head>
   <body>
+    <div style="color: white; background-color:red; text-align:center;"> This WebApp is only available on Terra 2.0 Testnet </div>
     <div id="root" data-nosnippet></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
