--- a/index.html
+++ b/index.html
@@ -15,10 +15,50 @@
     <meta name="google-site-verification" content="N6n4BYbWghfBh-jkUDybBLxZaI1k2GN_2S65zhpf058" />
     <link rel="manifest" href="/manifest.json"/>
     <title>Cavern Protocol</title>
+    <style>
+      .loader {
+        border: 8px solid rgba(255, 255, 255, 0.5); /* Light grey */
+        border-top: 8px solid #1b1e31; /* Blue */
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        animation: spin 1s linear infinite;
+        margin: auto;
+      }
+
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+       100% { transform: rotate(360deg); }
+      }
+
+      #no-site-container, #root:empty{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index:-1;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+        background-color: #1b1e31;
+      }
+
+    </style>
+
   </head>
-  <body>
-    <div style="color: white; background-color:red; text-align:center;"> This WebApp is only available on Terra 2.0 Testnet </div>
-    <div id="root" data-nosnippet></div>
+  <body style="margin: 0">
+    <div style="color: white; background-color:red; text-align:center; padding: 5px"> This WebApp is only available on Terra 2.0 Testnet </div>
+    <div id="root" data-nosnippet>
+      <div id="no-site-container">
+         <div class="loader"></div> 
+      </div>
+
+
+    </div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
